# ebrowser

./: Cargo.toml  Dockerfile.linux  Dockerfile.windows
.github/workflows/: build.yml  ci.yml
src/: imap.rs  lib.rs  main.rs
