[package]
name = "ebrowser"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
servo = { version = "0.1" }
egui = "0.34.1"
egui_glow = "0.34.1"
tokio = { version = "1", features = ["full"] }
url = "2.5"
log = "0.4"
env_logger = "0.11"
dpi = "0.1"
raw-window-handle = "0.6"
euclid = "0.22"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization (further reduces size, increases build time)
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # No unwinding on panic
strip = true        # Automatically strip symbols from the binary
